+ enabled multipliers for fermat factorization
+ fixed bug in qs filtering (thanks Will Fay!)
+ fixed a bug in .job file filling - handle no line break on last line
+ fixed "too many refactorizations" bug (thanks stargate38 and jcrombie!)
+ added a function to factor all single precision integers within a specified range
+ frontend calculator now uses gmp
+ Updated "gnfs.h" to use GMP
+ total SNFS support is complete (needs testing)
+ docfile updated
+ updated to use/link latest msieve SVN (currently 823)


v 1.33
+ made "found poly" messages much less verbose
+ using /r instead of printing backspaces now in ecm.c and SIQS.c
+ ggnfs jobs launched by yafu will now print out individual .last_spq files 
	per thread, although they are still not used for anything
+ get rid of blk_rel_count experiment code in siqs
+ add the beginnings of CUDA squfof support - although it is far from working 
	and probably not even beneficial at this point.  currently protected by 
	HAVE_CUDA definition
+ more work on tinySIQS, but still not fully operational.
+ added more fclose's (thanks jcrombie!)
+ fixed bugs that caused crashes when inputs numbers approached or exceeded
	1024 characters in batchfiles.
+ updates to text output of factor() to prevent window scrolling
	(thanks WraithX)
+ (re)support builds without NFS=1
+ got rid of cat.exe warning messages in windows that don't have unxutils
	(thanks WraithX)
+ slight cleanup of nfs state machine
+ improved min_rels calculation 
+ added ability to parse user supplied job files and supply missing parameters
	(thanks Dubslow!)
+ added additional support for user supplied snfs job files (allow input
	difficult, scale job parameters accordingly)
+ (re)support x86 builds on linux (thanks EdH!)
+ support for multiple nfs options simultaneously
+ allow comment lines in batch files (// or %)
+ new option to specify the B1 level beyond which ecm will attempt to use 
	external binaries: "ext_ecm"